--- a/mainnet/config.toml
+++ b/mainnet/config.toml
@@ -57,7 +57,7 @@ Percentile = 60
 MaxPrice = 500000000000
 
 [Node]
-DataDir = "/root/bkc-node/bkc-mainnet/node0"
+DataDir = "/root/bkc-node/mainnet"
 IPCPath = "geth.ipc"
 HTTPHost = "0.0.0.0"
 HTTPPort = 8545
