--- a/mainnet/config.toml
+++ b/mainnet/config.toml
@@ -56,7 +56,7 @@ Percentile = 60
 MaxPrice = 500000000000
 
 [Node]
-DataDir = "/root/bkc-node/mainnet"
+DataDir = "/bkc-node/mainnet/data"
 IPCPath = "geth.ipc"
 HTTPHost = "0.0.0.0"
 HTTPPort = 8545
