--- a/mainnet/config.toml
+++ b/mainnet/config.toml
@@ -13,8 +13,6 @@ TrieCleanCacheRejournal = 3600000000000
 TrieDirtyCache = 256
 TrieTimeout = 3600000000000
 EnablePreimageRecording = false
-EWASMInterpreter = ""
-EVMInterpreter = ""
 RPCGasCap = 25000000
 RPCTxFeeCap = 1e+01
 
@@ -64,6 +62,7 @@ HTTPVirtualHosts = ["*"]
 HTTPModules = ["eth", "net", "web3", "txpool"]
 WSHost = "0.0.0.0"
 WSPort = 8546
+WSOrigins = ["*"]
 WSModules = ["eth", "net", "web3", "txpool"]
 GraphQLVirtualHosts = ["localhost"]
 
