--- a/testnet/config.toml
+++ b/testnet/config.toml
@@ -14,12 +14,12 @@ TrieDirtyCache = 256
 TrieTimeout = 3600000000000
 SnapshotCache = 102
 EnablePreimageRecording = false
-RPCGasCap = 25000000
+RPCGasCap = 0
 RPCTxFeeCap = 1e+01
 
 [Eth.Miner]
-GasFloor = 30000000
-GasCeil = 30000000
+GasFloor = 65000000
+GasCeil = 65000000
 GasPrice = 5000000000
 Recommit = 3000000000
 Noverify = false
