--- a/mainnet/config.toml
+++ b/mainnet/config.toml
@@ -13,12 +13,12 @@ TrieCleanCacheRejournal = 3600000000000
 TrieDirtyCache = 256
 TrieTimeout = 3600000000000
 EnablePreimageRecording = false
-RPCGasCap = 25000000
+RPCGasCap = 0
 RPCTxFeeCap = 1e+01
 
 [Eth.Miner]
-GasFloor = 60000000
-GasCeil = 60000000
+GasFloor = 65000000
+GasCeil = 65000000
 GasPrice = 5000000000
 Recommit = 3000000000
 Noverify = false
